my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: my-api-deployment
     labels:
        app: my-api
spec:
  replicas: 3
  selector:
    matchLabels:
       app: my-api
  template:
    metadata: 
      labels:
         app: my-api
    spec:
       containers:
           - name: my-api
             image: obenbelhassen/my_api:latest
             ports:
                - containerPort: 5000
