my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
  labels:
    app: my-api
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-api
