my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-ingress
spec:
  defaultBackend:
    service:
      name: my-api-service
      port:
        number: 5000
